<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.timsimonhughes.atlas.ui.controller.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.timsimonhughes.atlas.ui.controller.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.timsimonhughes.atlas.ui.controller.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync"
        android:title="@string/pref_header_account" />

</preference-headers>