<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_news"
        android:title="@string/action_news"
        android:icon="@drawable/ic_story"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_discover"
        android:title="@string/action_discover"
        android:icon="@drawable/ic_discover_state_anim"
        android:orderInCategory="100"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/navigation_photo_of_day"
        android:title="@string/action_photo"
        android:icon="@drawable/ic_photo"
        android:orderInCategory="100"
        app:showAsAction="always" />

</menu>