<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_planet_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/planet_title_placeholder"
        android:textColor="@color/color_on_surface"
        android:textAppearance="@style/AppTheme.TextAppearance.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_planet_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/color_on_surface"
        android:text="@string/planet_desc_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_planet_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_planet_distance_sol_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/distance_from_sun_label"
        android:textColor="@color/color_on_surface"
        app:layout_constraintEnd_toStartOf="@+id/text_view_planet_orbital_period_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_planet_overview" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_planet_distance_sol_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textSize="24sp"
        android:textColor="@color/color_on_surface"
        app:layout_constraintEnd_toStartOf="@+id/text_view_planet_orbital_period_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_planet_distance_sol_label"
        tools:text="947,392,911" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_planet_orbital_period_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/orbital_period_label"
        android:textAppearance="@style/AppTheme.TextAppearance.Body"
        android:textColor="@color/color_on_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_view_planet_distance_sol_label"
        app:layout_constraintTop_toTopOf="@+id/text_view_planet_distance_sol_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_planet_orbital_period_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textColor="@color/color_on_surface"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_view_planet_distance_sol_value"
        app:layout_constraintTop_toBottomOf="@+id/text_view_planet_orbital_period_label"
        tools:text="365" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_planet_type_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/planet_type_label"
        android:textColor="@color/color_on_surface"
        app:layout_constraintEnd_toStartOf="@+id/text_view_planet_moon_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_planet_distance_sol_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_planet_type_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textAppearance="@style/AppTheme.TextAppearance.Title"
        android:textColor="@color/color_on_surface"
        app:layout_constraintEnd_toStartOf="@+id/text_view_planet_moon_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_planet_type_label"
        tools:text="Ice Giant" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_planet_moon_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/planet_moon_label"
        android:textColor="@color/color_on_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_view_planet_type_label"
        app:layout_constraintTop_toTopOf="@+id/text_view_planet_type_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_planet_moon_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textAppearance="@style/AppTheme.TextAppearance.Title"
        android:textColor="@color/color_on_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_view_planet_type_value"
        app:layout_constraintTop_toBottomOf="@+id/text_view_planet_moon_label"
        tools:text="13" />

    <com.timsimonhughes.atlas.views.PlanetOrbitView
        android:id="@+id/planet_orbit_view"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_planet_type_value" />

</androidx.constraintlayout.widget.ConstraintLayout>