<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.timsimonhughes.atlas.model.potd.POTD" />

        <variable
            name="imageLoadListener"
            type="com.timsimonhughes.appcore.utils.GlideDrawableLoadListener" />
    </data>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_view_potd"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/potd_content_description"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/POTD_image_transition"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:loadListener="@{imageLoadListener}"
                    app:srcUrl="@{item.url}"
                    tools:background="@color/color_primary"
                    tools:layout_height="180dp" />

                <TextView
                    android:id="@+id/text_view_date"
                    style="@style/TextAppearance.Atlas.Overline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{item.date}"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="@+id/text_view_explanation"
                    app:layout_constraintTop_toTopOf="@+id/image_view_potd"
                    tools:text="Date" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_explanation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@{item.explanation}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/planet_desc_placeholder" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

</layout>
